# ggs-submiter

./: CMakeLists.txt  CaloLongitudinalProfile.h  RootUtils.cmake  cmake_build.sh  cmake_compile.sh  setcommon.sh  setenvHERD_master.sh  setherd.sh
MCgeneration/Digitize/submit/htc/: digitize.eaconf.template  job.dig.template  make_list.sh  submit.template  submit_all.sh  submit_one_job.sh
MCgeneration/GeometricalAcceptance/: README.md  acceptance_checks.C  analysis.eaconf  check_calofidvol_draw.C  digitize.sh  digitizeMC.eaconf  geantino_sphere.mac  geometry.mac  run.sh  run_analysis.sh  run_vis.sh
MCgeneration/Particles/: electrons.mac  geometry.mac  protons.mac  run.sh
MCgeneration/Particles/datacards/: geo.mac  run_ele_hs_100.mac  run_ele_hs_1000.mac  run_pro_hs_100.mac  run_pro_hs_1000.mac
MCgeneration/Particles/submit/htc/: job.template  submit.template  submit_all.sh  submit_one_job.sh
analysis/calo/: caloaxis.C  draw_caloaxiseigval.C  draw_calocluster_histo.C  draw_scan.C  run_edep_scan.sh
analysis/calo/submit/htc/: analysis.caloonly.eaconf  analysis.electrons_1000GeV_10000GeV_E-1.eaconf  analysis.electrons_10GeV_1000GeV_E-1.eaconf  analysis.generic.caloclusters.eaconf  analysis.generic.dig.eaconf  analysis.generic.eaconf  job.template  make_lists.sh  submit_all.sh  submit_hadd.py  submit_one_job.sh
analysis/simplescript/: example.cpp  prepare.C
commonalgo/: CMakeLists.txt
commonalgo/Calo/: CaloAxis.cpp  CaloAxis.h  CaloAxisInfo.cpp  CaloAxisInfo.h  CaloDig.cpp  CaloDig.h  CaloGlob.cpp  CaloGlob.h  CaloTest.cpp
commonalgo/GeomAcceptance/: CMakeLists.txt  CaloGeomFidVolume.cpp  CaloGeomFidVolume.h  MCtruthHisto.cpp  MCtruthHisto.h  MCtruthProcess.cpp  MCtruthProcess.h
commonalgo/Histo/: CMakeLists.txt  CaloAxisHisto.cpp  CaloAxisHisto.h  CaloClusteringHisto.cpp  CaloClusteringHisto.h  CaloDigHisto.cpp  CaloDigHisto.h  CaloEnergyDepositHisto.cpp  CaloEnergyDepositHisto.h  CaloMcHitsHisto.cpp  CaloMcHitsHisto.h  CaloMcTrackOctogonalHisto.cpp  CaloMcTrackOctogonalHisto.h  EneHisto.cpp  EneHisto.h  MCGenSpectrum.cpp  MCGenSpectrum.h
commonalgo/Selection/: CaloMcHitsNumberSelection.cpp  CaloMcHitsNumberSelection.h  CaloMcTrackLenghtSelection.cpp  CaloMcTrackLenghtSelection.h
commonalgo/TreePersistence/: CMakeLists.txt  TreePersistence.cpp  TreePersistence.h
